--- a/app/templates/directory.html
+++ b/app/templates/directory.html
@@ -6,17 +6,22 @@
 {% block content %}
   {{ super() }}
   <h1>{{ path }}</h1>
-  <form action="#" method="post" enctype="multipart/form-data">
-    <input type="file" name="file">
-     <input type="submit" value="Upload">
-  </form>
-  <table id="list">
-  {% for file in files %}
-    <tr>
-      <td><a href="{{ file.name }}">{{ file.name }}</a></td>
-      <td>{{ if file.stream }}<a href="{{ file.stream }}">stream</a></td>
-    </tr>
-  {% endfor %}
-  </table>
+  <div id="tools" class="box">
+    <form action="#" method="post" enctype="multipart/form-data">
+      <input type="file" name="file">
+      <input type="submit" value="Upload">
+    </form>
+  </div>
+  <div id="files" class="box">
+    <table>
+    {% for file in files %}
+      <tr class="{{ loop.cycle('odd', 'even') }}">
+        <td class="icon"><img src="{{ url_for('static', filename=('icons/directory.png' if file.isdir else 'icons/file.png')) }}"></td>
+        <td class="name"><a href="{{ file.name + ('?play' if file.isvideo else '') }}">{{ file.name }}</a></td>
+        <td class="actions"><a href="{{ file.name + '?download' }}"><img src="{{ url_for('static', filename='icons/download.png') }}"></a><a href="{{ file.name + '?link' }}"><img src="{{ url_for('static', filename='icons/link.png') }}"></a></td>
+      </tr>
+    {% endfor %}
+    </table>
+  </div>
 {% endblock %}
 
