--- a/app/templates/player.html
+++ b/app/templates/player.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Swamp{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
 {% block content %}
   {{ super() }}
-  <h1>Player</h1>
+  <h1>{{ title }}</h1>
   <div id="player">
   <video id="video"></video>
   <div id="progress"><div id="progressbar"></div></div>
