Removed space before colon

--- a/app/templates/link.html
+++ b/app/templates/link.html
@@ -6,7 +6,7 @@
 {% block content %}
   {{ super() }}
   <div id="link" class="box">
-    <p>Link to <span class="filename">{{ filename }}</span>&nbsp;:</p>
+    <p>Link to <span class="filename">{{ filename }}</span>:</p>
     <p><a href="{{ link }}">{{ link }}</a></p>
   </div>
 {% endblock %}
