Implemented links for directories

--- a/app/templates/link.html
+++ b/app/templates/link.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Link to {{ filename }}{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
