--- a/app/templates/directory.html
+++ b/app/templates/directory.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Swamp{% endblock %}
+{% block title %}{{ path }}{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
