Added casting support

--- a/app/templates/player.html
+++ b/app/templates/player.html
@@ -14,9 +14,7 @@
   <script>
   window.onload = function() {
     loadVideo("{{ videoLocation }}", {{ videoTime }});
-    {% if isLocal %}
-    requestCastLinks();
-    {% endif %}
+    requestCastLinks("{{ castLocation }}");
   }
   </script>
 {% endblock %}
