Added streaming support from links

--- a/app/templates/player.html
+++ b/app/templates/player.html
@@ -14,7 +14,9 @@
   <script>
   window.onload = function() {
     loadVideo("{{ videoLocation }}", {{ videoTime }});
+    {% if castLocation %}
     requestCastLinks("{{ castLocation }}");
+    {% endif %}
   }
   </script>
 {% endblock %}
